# cloudflare-ddns

./: .bazelrc  .travis.yml  BUILD.bazel  Dockerfile  Gopkg.toml  README.md  WORKSPACE  build.sh  go.mod  go.sum  godeps.sh  main.go
.github/workflows/: ci.yml  golangci-lint.yml  tag.yml
bazel/: go-repositories.bzl  godeps.sh  multiplatform_image.bzl  status.sh
hack/: version.sh
manifests/: cronjob.yaml  kustomization.yaml
