load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/chrischdi/cloudflare-ddns
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/chrischdi/cloudflare-ddns",
    visibility = ["//visibility:private"],
    deps = ["@com_github_cloudflare_cloudflare_go//:go_default_library"],
)

go_binary(
    name = "cloudflare-ddns-amd64",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "amd64",
    visibility = ["//visibility:public"],
)
go_binary(
    name = "cloudflare-ddns-arm",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "arm",
    visibility = ["//visibility:public"],
)
go_binary(
    name = "cloudflare-ddns-arm64",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "arm64",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_image(
    name = "_go_image_amd64",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "amd64",
    visibility = ["//visibility:private"],
)
container_image(
    name = "go_image_amd64",
    architecture = "amd64",
    base = ":_go_image_amd64",
    visibility = ["//visibility:public"],
)
container_push(
   name = "push_amd64",
   image = ":go_image_amd64",
   format = "OCI",
   registry = "index.docker.io",
   repository = "chrischdi/cloudflare-ddns",
   tag = "{GIT_VERSION}-amd64-dev",
)

go_image(
    name = "_go_image_arm",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "arm",
    visibility = ["//visibility:private"],
)
container_image(
    name = "go_image_arm",
    architecture = "arm",
    base = ":_go_image_arm",
    visibility = ["//visibility:public"],
)
container_push(
   name = "push_arm",
   image = ":go_image_arm",
   format = "Docker",
   registry = "index.docker.io",
   repository = "chrischdi/cloudflare-ddns",
   tag = "{GIT_VERSION}-arm-dev",
)

go_image(
    name = "_go_image_arm64",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "arm64",
    visibility = ["//visibility:private"],
)
container_image(
    name = "go_image_arm64",
    architecture = "arm64",
    base = ":_go_image_arm64",
    visibility = ["//visibility:public"],
)
container_push(
   name = "push_arm64",
   image = ":go_image_arm64",
   format = "Docker",
   registry = "index.docker.io",
   repository = "chrischdi/cloudflare-ddns",
   tag = "{GIT_VERSION}-arm64-dev",
)
