load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:prefix github.com/chrischdi/cloudflare-ddns
gazelle(name = "gazelle")

go_library(
    name = "cloudflare-ddns_lib",
    srcs = ["main.go"],
    importpath = "github.com/chrischdi/cloudflare-ddns",
    visibility = ["//visibility:private"],
    deps = ["@com_github_cloudflare_cloudflare_go//:cloudflare-go"],
)

go_binary(
    name = "cloudflare-ddns",
    embed = [":cloudflare-ddns_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":cloudflare-ddns"],
)

oci_image(
    name = "image",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    base = "@distroless_base",
    entrypoint = ["/app"],
    os = "linux",
    tars = [":tar"],
)
